src/test/deca/syntax/valid/list_decl_var/test_list_decl_var_without_semi.deca
// Description:
//    tests de programme syntaxiquement correct
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2024

{
    int i = 0;
}