src/test/deca/syntax/invalid/list_decl_var/test_list_decl_var_without_semi.deca
// Description:
//    tests de programme syntaxiquement incorrects : pas de point-virgule
//
// Resultats:
//    Ligne 12: erreur de syntaxe : no viable alternative at input }
//    
//
// Historique:
//    cree le 01/01/2024

{
    int i = 0
}